# templates-qt6

./: CMakeLists.txt
app/: CMakeLists.txt
app/app_CLI_cmd/: CMakeLists.txt
app/app_CLI_cmd/src/: main.cpp
app/app_CLI_shell/: CMakeLists.txt
app/app_CLI_shell/src/: main.cpp
app/app_GUI_qt6/: CMakeLists.txt
app/app_GUI_qt6/src/: main.cpp
app/app_GUI_qt6/src/MainWindow/: MainWindow.cpp  MainWindow.ui
include/example/: example.hpp  functions.hpp
src/: CMakeLists.txt  functions.cpp
